fix(css): Change the padding and the gaps to space the content better on the page

--- a/business_card/styles.css
+++ b/business_card/styles.css
@@ -8,14 +8,14 @@
 
 .body{
     min-height: 100vh;
-    background-color:#3f7145d8;
+    background-color:#3f7145d8;  
 }
 
 .toggle-menu{
     display:flex;
     justify-content: space-around;
     font-size:20px;
-    padding:10px;
+    padding:15px;
 }
 
 .content-container{
@@ -31,7 +31,7 @@
 }
 
 .head-container{
-    padding:10px;
+    padding:30px;
 }
 
 .page-heading{
@@ -49,6 +49,7 @@
     display:flex;
     flex-direction: column;
     gap:20px;
+    padding: 30px;
 }
 
 .tagline-container{
